EZ-1133 fix courses list on small screens

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -358,17 +358,34 @@ nav.crumb-wrap .breadcrumb:before {
     position: relative;
 }
 
+#courses-list a.course-add-students {
+    position: absolute;
+    top: 11px;
+    right: 5px;
+    color: #4cab54;
+    text-transform: none;
+}
+
 #courses-list span.course-student-count {
     font-size: 1.9rem;
     color: #333;
+    margin-left: 1rem;
+    display: none;
 }
 
-#courses-list a.course-add-students {
-    position: absolute;
-    top: 19px;
-    right: 20px;
-    color: #4cab54;
-    text-transform: none;
+@media only screen and (min-width: 400px) {
+    #courses-list span.course-student-count {
+        display: initial;
+    }
+    #courses-list a.course-add-students {
+        right: 20px;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #courses-list a.course-add-students {
+        top: 18px;
+    }
 }
 
 #courses-list a.course-add-students:hover {
@@ -576,15 +593,22 @@ textarea:focus + label {
 /** Divided collection **/
 
 div.divided-collection a.collection-item {
-    font-size: 2.1rem;
-    line-height: 5rem;
+    font-size: 1.8rem;
+    line-height: 4rem;
     color: #333;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     margin-bottom: 1rem;
     border-bottom: none;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1),
     0 2px 1px -2px rgba(0, 0, 0, 0.09),
     0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (min-width: 600px) {
+    div.divided-collection a.collection-item {
+        font-size: 2.1rem;
+        line-height: 5rem;
+    }
 }
 
 .divided-collection .collection-item.sm {
@@ -916,5 +940,47 @@ i.material-icons {
     /* @formatter:off */
     0% {background-color: #a8a8a8; box-shadow: none;}1.2%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}1.59%{background-color: #a8a8a8; box-shadow: none;}1.99%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}2.39%{background-color: #a8a8a8; box-shadow: none;}3.59%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}3.98%{background-color: #a8a8a8; box-shadow: none;}5.18%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}6.37%{background-color: #a8a8a8; box-shadow: none;}7.57%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}7.97%{background-color: #a8a8a8; box-shadow: none;}9.16%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}9.56%{background-color: #a8a8a8; box-shadow: none;}10.76%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}11.95%{background-color: #a8a8a8; box-shadow: none;}12.35%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}12.75%{background-color: #a8a8a8; box-shadow: none;}13.15%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}13.55%{background-color: #a8a8a8; box-shadow: none;}14.74%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}15.94%{background-color: #a8a8a8; box-shadow: none;}16.33%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}16.73%{background-color: #a8a8a8; box-shadow: none;}17.93%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}18.33%{background-color: #a8a8a8; box-shadow: none;}19.52%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}19.92%{background-color: #a8a8a8; box-shadow: none;}21.12%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}21.51%{background-color: #a8a8a8; box-shadow: none;}22.71%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}23.11%{background-color: #a8a8a8; box-shadow: none;}23.51%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}24.7%{background-color: #a8a8a8; box-shadow: none;}25.1%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}25.5%{background-color: #a8a8a8; box-shadow: none;}26.69%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}27.09%{background-color: #a8a8a8; box-shadow: none;}27.49%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}28.69%{background-color: #a8a8a8; box-shadow: none;}29.08%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}31.87%{background-color: #a8a8a8; box-shadow: none;}32.27%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}32.67%{background-color: #a8a8a8; box-shadow: none;}33.86%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}36.65%{background-color: #a8a8a8; box-shadow: none;}37.05%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}37.45%{background-color: #a8a8a8; box-shadow: none;}38.65%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}39.04%{background-color: #a8a8a8; box-shadow: none;}40.24%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}41.43%{background-color: #a8a8a8; box-shadow: none;}41.83%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}42.23%{background-color: #a8a8a8; box-shadow: none;}42.63%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}43.82%{background-color: #a8a8a8; box-shadow: none;}45.02%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}45.42%{background-color: #a8a8a8; box-shadow: none;}46.61%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}47.01%{background-color: #a8a8a8; box-shadow: none;}47.41%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}47.81%{background-color: #a8a8a8; box-shadow: none;}48.21%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}49.4%{background-color: #a8a8a8; box-shadow: none;}49.8%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}50.2%{background-color: #a8a8a8; box-shadow: none;}51.39%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}52.59%{background-color: #a8a8a8; box-shadow: none;}52.99%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}53.39%{background-color: #a8a8a8; box-shadow: none;}54.58%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}54.98%{background-color: #a8a8a8; box-shadow: none;}55.38%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}56.57%{background-color: #a8a8a8; box-shadow: none;}57.77%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}58.17%{background-color: #a8a8a8; box-shadow: none;}58.57%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}58.96%{background-color: #a8a8a8; box-shadow: none;}59.36%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}60.56%{background-color: #a8a8a8; box-shadow: none;}61.75%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}62.15%{background-color: #a8a8a8; box-shadow: none;}63.35%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}63.75%{background-color: #a8a8a8; box-shadow: none;}64.14%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}64.54%{background-color: #a8a8a8; box-shadow: none;}64.94%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}65.34%{background-color: #a8a8a8; box-shadow: none;}66.53%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}66.93%{background-color: #a8a8a8; box-shadow: none;}68.13%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}70.92%{background-color: #a8a8a8; box-shadow: none;}71.31%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}71.71%{background-color: #a8a8a8; box-shadow: none;}72.11%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}72.51%{background-color: #a8a8a8; box-shadow: none;}72.91%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}73.31%{background-color: #a8a8a8; box-shadow: none;}73.71%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}74.9%{background-color: #a8a8a8; box-shadow: none;}75.3%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}75.7%{background-color: #a8a8a8; box-shadow: none;}76.89%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}78.09%{background-color: #a8a8a8; box-shadow: none;}78.49%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}78.88%{background-color: #a8a8a8; box-shadow: none;}80.08%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}80.48%{background-color: #a8a8a8; box-shadow: none;}80.88%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}82.07%{background-color: #a8a8a8; box-shadow: none;}82.47%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}82.87%{background-color: #a8a8a8; box-shadow: none;}84.06%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}84.46%{background-color: #a8a8a8; box-shadow: none;}84.86%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}86.06%{background-color: #a8a8a8; box-shadow: none;}87.25%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}87.65%{background-color: #a8a8a8; box-shadow: none;}88.05%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}88.45%{background-color: #a8a8a8; box-shadow: none;}89.64%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}90.04%{background-color: #a8a8a8; box-shadow: none;}91.24%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}92.43%{background-color: #a8a8a8; box-shadow: none;}93.63%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}94.02%{background-color: #a8a8a8; box-shadow: none;}94.42%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}94.82%{background-color: #a8a8a8; box-shadow: none;}96.02%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}96.41%{background-color: #a8a8a8; box-shadow: none;}96.81%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}97.21%{background-color: #a8a8a8; box-shadow: none;}98.41%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}98.8%{background-color: #a8a8a8; box-shadow: none;}100.0%{background-color: #fbff00; box-shadow:0 0 10px 10px rgba(255, 255, 190, 0.8);}
     /* @formatter:on */
+}
+
+
+/** XS-screen addon **/
+
+@media only screen and (max-width: 399px) {
+    .row .col.xs1 {
+        width: 8.3333333333%;
+    }
+    .row .col.xs2 {
+        width: 16.6666666667%;
+    }
+    .row .col.xs3 {
+        width: 25%;
+    }
+    .row .col.xs4 {
+        width: 33.3333333333%;
+    }
+    .row .col.xs5 {
+        width: 41.6666666667%;
+    }
+    .row .col.xs6 {
+        width: 50%;
+    }
+    .row .col.xs7 {
+        width: 58.3333333333%;
+    }
+    .row .col.xs8 {
+        width: 66.6666666667%;
+    }
+    .row .col.xs9 {
+        width: 75%;
+    }
+    .row .col.xs10 {
+        width: 83.3333333333%;
+    }
+    .row .col.xs11 {
+        width: 91.6666666667%;
+    }
+    .row .col.xs12 {
+        width: 100%;
+    }
 }
 
