--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -607,6 +607,12 @@ nav.crumb-wrap .breadcrumb:before {
     border: 1px solid #eee;
 }
 
+@media only screen and (min-width: 400px) {
+    .toggleable-wrap {
+        padding: 1rem;
+    }
+}
+
 @media only screen and (min-width: 601px) {
     .toggleable-wrap {
         padding: 2rem;
