EZ-1133 fix disappearing first tab in exercise page

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -213,9 +213,8 @@ nav.crumb-wrap .breadcrumb:before {
 
 /** Exercise page **/
 
-#exercise-card .tabs {
-    display: flex;
-    justify-content: center;
+#exercise-card #tabs-wrap {
+    text-align: center;
 }
 
 #exercise-card .tabs .tab {
