EZ-1186 fix wrong timing in courses loading animation

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -920,6 +920,10 @@ div.title-wrap > .title-button > i.material-icons {
     animation-delay: 0.7s;
 }
 
+.loading-collection :nth-child(4) {
+    animation-delay: 0.9s;
+}
+
 
 /** Empty placeholders **/
 
